--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,140 +1,39 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_gravity="center"
     android:background="@drawable/pastel"
-    tools:context=".MainActivity">
+    android:orientation="vertical"
+    tools:context=".MainActivity"
+    >
 
-    <androidx.appcompat.widget.AppCompatTextView
-        android:layout_width="match_parent"
-        android:layout_height="20dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:text="Developed by Marko Manic"
-        android:textAlignment="center"
-        android:textColor="@color/Blue"
-        android:textStyle="italic"
-        />
-
-    <androidx.appcompat.widget.AppCompatImageView
-        android:id="@+id/image1"
-        android:layout_width="200dp"
-        android:layout_height="150dp"
-        android:layout_marginTop="70dp"
-        android:src="@drawable/chatlogogog"
-        app:layout_constraintBottom_toTopOf="@+id/usernamefield1"
+    <!-- Container for fragments -->
+    <FrameLayout
+        android:id="@+id/container"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toTopOf="@id/bottomnavigationbuttons"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/usernamefield1"
-        android:layout_width="350dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="25dp"
-        android:hint="Username"
-        app:boxStrokeColor="@color/Brown"
-        app:boxStrokeWidth="3dp"
-        app:counterEnabled="true"
-        app:counterMaxLength="25"
-        app:helperTextTextAppearance="@color/Red"
-        app:helperTextTextColor="@color/green"
-        app:hintTextColor="@color/MidnightBlue"
+
+
+    <!-- Bottom Navigation View -->
+    <com.google.android.material.bottomnavigation.BottomNavigationView
+        android:id="@+id/bottomnavigationbuttons"
+        android:layout_width="match_parent"
+        android:layout_height="62dp"
+        app:itemIconSize="15dp"
+        app:itemBackground="@drawable/edit_text_background"
+        app:itemHorizontalTranslationEnabled="true"
+        app:itemTextColor="@color/Blue"
+        android:background="@drawable/pastel"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/image1">
-
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/usernameEditText1"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="a@gmail.com"
-            android:background="@drawable/rounded_edittext_background"
-            android:inputType="text"
-            android:textAlignment="center"
-            android:textColor="@color/MidnightBlue"
-            android:textColorHint="@color/MediumBlue" />
-
-    </com.google.android.material.textfield.TextInputLayout>
-
-    <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/passwordfield1"
-        android:layout_width="350dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="25dp"
-        android:hint="Password"
-        app:boxStrokeColor="@color/Brown"
-        app:boxStrokeWidth="3dp"
-        app:counterEnabled="true"
-        app:counterMaxLength="25"
-        app:helperTextTextAppearance="@color/Red"
-        app:helperTextTextColor="@color/green"
-        app:hintTextColor="@color/MidnightBlue"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/usernamefield1">
-
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/passwordEditText1"
-            android:layout_width="match_parent"
-            android:text="123456789"
-            android:layout_height="wrap_content"
-            android:background="@drawable/rounded_edittext_background"
-            android:inputType="textPassword"
-            android:textAlignment="center"
-            android:textColor="@color/MidnightBlue"
-            android:textColorHint="@color/MediumBlue" />
-
-    </com.google.android.material.textfield.TextInputLayout>
-
-
-    <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/loginButton1"
-        android:layout_width="300dp"
-        android:layout_height="60dp"
-        android:layout_marginTop="60dp"
-        android:background="@drawable/rounded_button"
-        android:text="Login"
-        android:textColor="@color/AliceBlue"
-        android:textSize="18sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/passwordfield1" />
-
-    <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/forgotpasswordbutton"
-        android:layout_width="200dp"
-        android:layout_height="25dp"
-        android:layout_marginTop="10dp"
-        android:background="@android:color/transparent"
-        android:text="Forgot password?"
-        android:textAllCaps="false"
-        android:textColor="@color/black"
-        android:textColorHighlight="@color/Red"
-        android:textSize="15sp"
-        android:textStyle="italic"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/loginButton1" />
-
-    <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/registerherebutton"
-        android:layout_width="220dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:background="@drawable/rounded_button"
-        android:text="Signup here!"
-        android:textColor="@color/AliceBlue"
-        android:textSize="15sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/forgotpasswordbutton" />
-
+        app:menu="@menu/bottom_navigation_menu" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
