--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:layout_gravity="center"
     android:background="@drawable/pastel"
-    tools:context=".MainActivity">
+    tools:context=".RegisterActivity">
     <!-- IMAGE -->
     <androidx.appcompat.widget.AppCompatImageView
         android:id="@+id/imageregister"
