--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -9,13 +9,13 @@
     tools:context=".RegisterActivity">
     <!-- IMAGE -->
     <androidx.appcompat.widget.AppCompatImageView
-        android:id="@+id/imageregister"
+        android:id="@+id/ImageViewRegister"
         android:layout_width="150dp"
         android:layout_height="50dp"
         android:layout_marginTop="15dp"
         android:layout_marginBottom="10dp"
         android:src="@drawable/chatlogogog"
-        app:layout_constraintBottom_toTopOf="@+id/jedan"
+        app:layout_constraintBottom_toTopOf="@+id/emailTextLayout"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -23,7 +23,7 @@
     <!-- EMAILS -->
 
     <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/jedan"
+        android:id="@+id/emailTextLayout"
         android:layout_width="300dp"
         android:layout_height="100dp"
         android:layout_marginBottom="5dp"
@@ -36,18 +36,18 @@
         app:helperTextTextAppearance="@color/Red"
         app:helperTextTextColor="@color/green"
         app:hintTextColor="@color/MidnightBlue"
-        app:layout_constraintBottom_toTopOf="@id/dva"
+        app:layout_constraintBottom_toTopOf="@id/emailconformTextLayout"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/imageregister">
+        app:layout_constraintTop_toBottomOf="@id/ImageViewRegister">
 
         <com.google.android.material.textfield.TextInputEditText
 
-            android:id="@+id/emailregister"
+            android:id="@+id/emailEditText"
             android:layout_width="match_parent"
             android:layout_height="55dp"
             android:background="@drawable/rounded_edittext_background"
-            android:hint="Email address"
+            android:hint="E-mail address"
             android:textAlignment="center"
             android:textColor="@color/MidnightBlue"
             android:textColorHint="@color/black" />
@@ -55,7 +55,7 @@
     </com.google.android.material.textfield.TextInputLayout>
 
     <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/dva"
+        android:id="@+id/emailconformTextLayout"
         android:layout_width="300dp"
         android:layout_height="100dp"
         android:layout_marginTop="5dp"
@@ -70,11 +70,11 @@
         app:hintTextColor="@color/MidnightBlue"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/jedan">
+        app:layout_constraintTop_toBottomOf="@id/emailTextLayout">
 
         <com.google.android.material.textfield.TextInputEditText
 
-            android:id="@+id/emailregisterconfirm"
+            android:id="@+id/emailconfirmEditText"
             android:layout_width="match_parent"
             android:layout_height="55dp"
             android:background="@drawable/rounded_edittext_background"
@@ -88,7 +88,7 @@
 
     <!-- First Name -->
     <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/firstNameLayout"
+        android:id="@+id/FirstNameTextLayout"
         android:layout_width="170dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
@@ -99,12 +99,11 @@
         app:helperTextTextAppearance="@color/Red"
         app:helperTextTextColor="@color/green"
         app:hintTextColor="@color/MidnightBlue"
-
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/datePicker">
+        app:layout_constraintTop_toBottomOf="@id/DatePicker">
 
         <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/firstname"
+            android:id="@+id/FirstNameEditText"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@drawable/rounded_edittext_background"
@@ -117,7 +116,7 @@
 
     <!-- Last Name -->
     <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/lastNameLayout"
+        android:id="@+id/LastNameTextLyout"
         android:layout_width="170dp"
         android:layout_height="wrap_content"
         android:layout_marginEnd="10dp"
@@ -129,10 +128,10 @@
         app:helperTextTextColor="@color/green"
         app:hintTextColor="@color/MidnightBlue"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/datePicker">
+        app:layout_constraintTop_toBottomOf="@id/DatePicker">
 
         <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/lastname"
+            android:id="@+id/LastNameEditText"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@drawable/rounded_edittext_background"
@@ -147,20 +146,20 @@
     <!-- AGE -->
 
     <TextView
-        android:id="@+id/datePickerHint"
+        android:id="@+id/DatePickerTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:text="Select your date of birth"
         android:textColor="@color/Blue"
         android:textSize="12sp"
-        app:layout_constraintBottom_toTopOf="@id/datePicker"
+        app:layout_constraintBottom_toTopOf="@id/DatePicker"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/dva" />
+        app:layout_constraintTop_toBottomOf="@id/LastNameTextLyout" />
 
     <DatePicker
-        android:id="@+id/datePicker"
+        android:id="@+id/DatePicker"
         android:layout_width="match_parent"
         android:layout_height="90dp"
         android:calendarViewShown="false"
@@ -168,15 +167,15 @@
         android:spinnersShown="true"
         android:textAlignment="center"
         android:calendarTextColor="@color/Blue"
-        app:layout_constraintBottom_toTopOf="@id/passwordLayout"
+        app:layout_constraintBottom_toTopOf="@id/PasswordTextLayout"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/datePickerHint" />
+        app:layout_constraintTop_toBottomOf="@id/DatePickerTextView" />
 
 
     <!-- PASSWORDS -->
     <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/passwordLayout"
+        android:id="@+id/PasswordTextLayout"
         android:layout_width="250dp"
         android:layout_height="80dp"
         android:layout_marginVertical="90dp"
@@ -190,10 +189,10 @@
         app:hintTextColor="@color/MidnightBlue"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/datePicker">
+        app:layout_constraintTop_toBottomOf="@+id/DatePicker">
 
         <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/passwordregister"
+            android:id="@+id/PasswordRegisterEditText"
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:background="@drawable/rounded_edittext_background"
@@ -207,7 +206,7 @@
     </com.google.android.material.textfield.TextInputLayout>
 
     <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/passwordConfirmLayout"
+        android:id="@+id/PasswordConfirmTextLayout"
         android:layout_width="250dp"
         android:layout_height="80dp"
         android:layout_marginBottom="40dp"
@@ -219,13 +218,13 @@
         app:helperTextTextAppearance="@color/Red"
         app:helperTextTextColor="@color/green"
         app:hintTextColor="@color/MidnightBlue"
-        app:layout_constraintBottom_toTopOf="@id/registerbutton"
+        app:layout_constraintBottom_toTopOf="@id/RegisterButton"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/passwordLayout">
+        app:layout_constraintTop_toBottomOf="@+id/PasswordTextLayout">
 
         <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/passwordregisterconfirm"
+            android:id="@+id/PasswordConfirmRegisterEditText"
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:background="@drawable/rounded_edittext_background"
@@ -242,7 +241,7 @@
     <!-- BUTTONS -->
 
     <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/alreadyhaveaccount"
+        android:id="@+id/AlreadyHaveAccountButton"
         android:layout_width="250dp"
         android:layout_height="25dp"
         android:background="@android:color/transparent"
@@ -250,14 +249,14 @@
         android:textSize="12sp"
         android:textStyle="italic"
         android:textColor="@color/Blue"
-        app:layout_constraintBottom_toTopOf="@id/registerbutton"
+        app:layout_constraintBottom_toTopOf="@id/RegisterButton"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/passwordConfirmLayout"
+        app:layout_constraintTop_toBottomOf="@+id/PasswordConfirmTextLayout"
         app:layout_goneMarginTop="10dp" />
 
     <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/registerbutton"
+        android:id="@+id/RegisterButton"
         android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:background="@drawable/rounded_button"
@@ -267,7 +266,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/alreadyhaveaccount"
+        app:layout_constraintTop_toBottomOf="@+id/AlreadyHaveAccountButton"
         app:layout_goneMarginTop="10dp" />
 
 
