--- a/app/src/main/res/layout/activity_forgot_password.xml
+++ b/app/src/main/res/layout/activity_forgot_password.xml
@@ -42,7 +42,7 @@
 
     <!-- Reset Button -->
     <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/forgotPasswordButton"
+        android:id="@+id/resetPasswordButton"
         android:layout_width="300dp"
         android:layout_height="60dp"
         android:layout_gravity="center_horizontal"
