--- a/app/src/main/res/layout/activity_log_in.xml
+++ b/app/src/main/res/layout/activity_log_in.xml
@@ -21,18 +21,18 @@
         app:layout_constraintStart_toStartOf="parent" />
 
     <androidx.appcompat.widget.AppCompatImageView
-        android:id="@+id/image1"
+        android:id="@+id/logInImage"
         android:layout_width="200dp"
         android:layout_height="150dp"
         android:layout_marginTop="70dp"
         android:src="@drawable/chatlogogog"
-        app:layout_constraintBottom_toTopOf="@+id/usernamefield1"
+        app:layout_constraintBottom_toTopOf="@+id/logInUserNameTextField"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/usernamefield1"
+        android:id="@+id/logInUserNameTextField"
         android:layout_width="350dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="25dp"
@@ -46,10 +46,10 @@
         app:hintTextColor="@color/MidnightBlue"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/image1">
+        app:layout_constraintTop_toBottomOf="@id/logInImage">
 
         <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/usernameEditText1"
+            android:id="@+id/logInUserNameEditText"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@drawable/rounded_edittext_background"
@@ -62,7 +62,7 @@
     </com.google.android.material.textfield.TextInputLayout>
 
     <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/passwordfield1"
+        android:id="@+id/logInPasswordTextFiled"
         android:layout_width="350dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="25dp"
@@ -76,10 +76,10 @@
         app:hintTextColor="@color/MidnightBlue"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/usernamefield1">
+        app:layout_constraintTop_toBottomOf="@id/logInUserNameTextField">
 
         <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/passwordEditText1"
+            android:id="@+id/logInPasswordEditText"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@drawable/rounded_edittext_background"
@@ -93,20 +93,20 @@
 
 
     <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/loginButton1"
+        android:id="@+id/logInButton"
         android:layout_width="300dp"
         android:layout_height="60dp"
         android:layout_marginTop="60dp"
         android:background="@drawable/rounded_button"
-        android:text="Login"
+        android:text="Log in"
         android:textColor="@color/AliceBlue"
         android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/passwordfield1" />
+        app:layout_constraintTop_toBottomOf="@+id/logInPasswordTextFiled" />
 
     <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/forgotpasswordbutton"
+        android:id="@+id/forgotPasswordButton"
         android:layout_width="200dp"
         android:layout_height="25dp"
         android:layout_marginTop="10dp"
@@ -119,10 +119,10 @@
         android:textStyle="italic"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/loginButton1" />
+        app:layout_constraintTop_toBottomOf="@+id/logInButton" />
 
     <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/registerherebutton"
+        android:id="@+id/signupHereButton"
         android:layout_width="220dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
@@ -132,7 +132,7 @@
         android:textSize="15sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/forgotpasswordbutton" />
+        app:layout_constraintTop_toBottomOf="@+id/forgotPasswordButton" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
