--- a/app/src/main/res/layout/activity_forgot_password.xml
+++ b/app/src/main/res/layout/activity_forgot_password.xml
@@ -64,7 +64,7 @@
         android:layout_height="wrap_content"
         android:text="Developed by Marko Manic"
         android:textAlignment="center"
-        android:textColor="@color/Blue"
+        android:textColor="@color/CadetBlue"
         android:textStyle="italic" />
 
 </LinearLayout>
