--- a/app/src/main/res/layout/activity_log_in.xml
+++ b/app/src/main/res/layout/activity_log_in.xml
@@ -14,7 +14,7 @@
         android:layout_height="20dp"
         android:text="Developed by Marko Manic"
         android:textAlignment="center"
-        android:textColor="@color/Blue"
+        android:textColor="@color/CadetBlue"
         android:textStyle="italic"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
